Pebbles are broken pickles, cobbles exist

--- a/src/main/resources/assets/sticks_and_stones/lang/en_us.json
+++ b/src/main/resources/assets/sticks_and_stones/lang/en_us.json
@@ -1,3 +1,5 @@
 {
-  "block.sticks_and_stones.pebble_block": "Pebble"
+  "block.sticks_and_stones.pebble_block": "Pebble",
+  "block.sticks_and_stones.cobble_block": "Cobble"
+
 }
