and the world will turn to ash.

--- a/src/main/resources/assets/sticks_and_stones/lang/en_us.json
+++ b/src/main/resources/assets/sticks_and_stones/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "block.sticks_and_stones.pebble_block": "Pebble",
-  "block.sticks_and_stones.cobble_block": "Cobble"
+  "block.sticks_and_stones.cobble_block": "Cobble",
+  "item.sticks_and_stones.stone_shovel_head": "Stone Shovel Head"
 
 }
